Bug 689960 - PDF issue: Error: /VMerror in --run--
Summary: PDF issue: Error: /VMerror in --run--
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Interpreter (show other bugs)
Version: master
Hardware: All All
: P2 normal
Assignee: Alex Cherepanov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-10 06:52 UTC by Marcos H. Woehrmann
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer: 330
Word Size: ---


Attachments
patch (506 bytes, patch)
2008-07-10 09:23 UTC, Alex Cherepanov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2008-07-10 06:52:36 UTC
The customer reports and I've verified that the attached file produces a "Error: /VMerror in --run--" 
when read by Ghostscript (8.54, 8.62, and read (r8825) all fail in the same way).  Acrobat Reader and 
Apple Preview open the file without complaint.

The command line I'm using:

  bin/gs -sDEVICE=tiff24nc -sOutputFile=test.tif ./Designbelaege_Spacia.pdf

-dPDFDEBUG produces the following:

marcos@imac:[48]% gsheadtiff -dPDFDEBUG Designbelaege_Spacia.pdf
GPL Ghostscript SVN PRE-RELEASE 8.63 (2008-03-01)
Copyright (C) 2008 Artifex Software, Inc.  All rights reserved.
This software comes with NO WARRANTY: see the file PUBLIC for details.
<<
/Size 35 /Prev 4901975 /Root 7 0 R
/Info 5 0 R
/ID [
(wl\374\210-\(\026M\234f\304\203v\370b\253) (s\303\306\226e\013sF\202R1>\355\327":) ]
>>
<<
/Size 6 >>
%Resolving: [7 0]
<<
/ViewerPreferences <<
/Direction /L2R >>
/Metadata 4 0 R
/Pages 3 0 R
/Type /Catalog /PageLabels 1 0 R
>>
endobj
%Resolving: [3 0]
<<
/Count 1 /Type /Pages /Kids [
8 0 R
]
>>
endobj
%Resolving: [7 0]
%Resolving: [7 0]
%Resolving: [3 0]
Processing pages 1 through 1.
Page 1
%Resolving: [7 0]
%Resolving: [3 0]
%Resolving: [8 0]
<<
/CropBox [
0.0 0.0 2044.02 4368.43 ]
/Parent 3 0 R
/Contents [
12 0 R
13 0 R
14 0 R
15 0 R
16 0 R
18 0 R
19 0 R
20 0 R
]
/Rotate 0 /BleedBox [
15.7087 15.7088 2028.31 4352.72 ]
/ArtBox [
58.2283 58.2285 1985.79 4310.2 ]
/MediaBox [
0.0 0.0 2044.02 4368.43 ]
/TrimBox [
58.2283 58.2285 1985.79 4310.2 ]
/Resources <<
/XObject <<
/Im0 22 0 R
>>
/ColorSpace <<
/CS0 11 0 R
>>
/Font <<
/TT0 9 0 R
/TT1 10 0 R
/T1_0 17 0 R
>>
/ProcSet [
/PDF /Text /ImageC ]
/Properties <<
/MC0 <<
/Metadata 31 0 R
>>
>>
/ExtGState <<
/GS0 32 0 R
/GS1 33 0 R
>>
>>
/Type /Page >>
endobj
%Resolving: [8 0]
%Resolving: [8 0]
%Resolving: [8 0]
%Resolving: [8 0]
%Resolving: [11 0]
[
/Separation /All /DeviceGray <<
/C0 [
1.0 ]
/C1 [
0.0 ]
/FunctionType 2 /N 1.0 /Domain [
0 1 ]
/Range [
0.0 1.0 ]
>>
]
endobj
%Resolving: [22 0]
<<
/Intent /RelativeColorimetric /Subtype /Image /Length 4863091 /Filter /DCTDecode /Name /X 
/Metadata 21 0 R
/BitsPerComponent 8 /ColorSpace /DeviceCMYK /Width 2012 /Height 4331 /Type /XObject >>
stream
%FilePosition: 13401
endobj
%Resolving: [33 0]
<<
/OPM 1 /BM /Normal /CA 1.0 /OP true
/SMask /None /ca 1.0 /AIS false
/op true
/Type /ExtGState /SA true
>>
endobj
%Resolving: [32 0]
<<
/OPM 1 /BM /Normal /CA 1.0 /OP false
/SMask /None /ca 1.0 /AIS false
/op false
/Type /ExtGState /SA true
>>
endobj
%Resolving: [22 0]
%Resolving: [3 0]
%Resolving: [33 0]
%Resolving: [32 0]
%Resolving: [22 0]
%Resolving: [3 0]
%Resolving: [12 0]
<<
/Length 1178 /Filter /FlateDecode >>
stream
%FilePosition: 2652
endobj
/PlacedGraphic /MC0 BDC
q
15.709 15.709 2012.59802 4337.00781 re
W
n
q
15.709 15.711 2012.59802 4337.00781 re
W*
n
q
14.183 15.662 2014.81396 4337.05811 re
W
n
q
/GS0 gs
%Resolving: [32 0]
/RelativeColorimetric ri
2014.81409 0 0 4337.05762 14.1832581 15.6617889 cm
/Im0 Do
%Resolving: [22 0]
Q
EMC
Q
Q
0.37 0.51 0.33 0.78 k
0 i
/RelativeColorimetric ri
/GS0 gs
%Resolving: [32 0]
15.709 4014.13306 1165.03894 154.334 re
f*
0 0 0 0 k
BT
/TT0 1 Tf
%Resolving: [9 0]
<<
/Subtype /TrueType /FontDescriptor 24 0 R
/LastChar 228 /Widths [
740 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 510 0 0 479 0 427 0 188 0 0 188 0 490 0 0 0 
0 354 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
0 0 0 0 427 ]
/BaseFont /GIXNWH+GillSansLight-Regular /FirstChar 68 /ToUnicode 25 0 R
/Encoding /WinAnsiEncoding /Type /Font >>
endobj
%Resolving: [24 0]
<<
/StemV 48 /FontName /GIXNWH+GillSansLight-Regular /FontFile2 23 0 R
/FontStretch /Normal /FontWeight 400 /Flags 32 /Descent -256 /FontBBox [
-70 -256 1033 911 ]
/Ascent 911 /FontFamily (Gill Sans Light) /CapHeight 682 /XHeight 449 /Type /FontDescriptor 
/ItalicAngle 0 >>
endobj
%Resolving: [23 0]
<<
/Length 7897 /Filter /FlateDecode /Length1 15515 >>
stream
%FilePosition: 4876576
endobj
%Resolving: [24 0]
%Resolving: [24 0]
%Resolving: [24 0]
0 Tc
0 Tw
0 Ts
100 Tz
0 Tr
118.9972 0 0 121.425797 199.960602 4050.22168 Tm
[
(D) 14 (e) 13 (s) 18 (i) 25 (g) 12 (n) 15 (b) 13 (e) 11 (l) 20 (\344) 18 (g) 22 (e) ]
TJ
Error: /VMerror in --run--
VM status: 3 10167634 11489932
Current allocation mode is local
Last OS error: 2
GPL Ghostscript SVN PRE-RELEASE 8.63: Unrecoverable error, exit code 1
Comment 1 Marcos H. Woehrmann 2008-07-10 06:53:51 UTC
Created attachment 4202 [details]
Designbelaege_Spacia.pdf
Comment 2 Ray Johnston 2008-07-10 08:53:53 UTC
This is failing when trying to open the embedded TT font. Specifically, in
ttobjs.c::Instance_Create at line 573:

    if (maxp->maxInstructionDefs > 255)
	goto Fail_Memory;

maxp->maxInstructionDefs has value 362 so the jump to Fail_Memory is taken.

Comment 3 Alex Cherepanov 2008-07-10 09:23:36 UTC
Created attachment 4208 [details]
patch

TrueType instruction definitions (IDEF) are addressed by a single byte index. 
So there cannot be mode than 256 different instructions. Nevertheless, a
request
a larger array for instruction definitions should not be a fatal error.
Comment 4 Alex Cherepanov 2008-07-10 22:08:07 UTC
The patch is committed as a rev. 8831.
Regression testing shows no differences.