TrueType instruction definitions (IDEF) are addressed by a single byte index. So there cannot be mode than 256 different instructions. Nevertheless, a request a for larger array for instruction definitions should not be a fatal error. Bug 689960, customer 330.

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8831 a1074d23-0009-0410-80fe-cf8c14f379e6